--- a/Views/Post/Remove.cshtml
+++ b/Views/Post/Remove.cshtml
@@ -33,6 +33,6 @@
     <form asp-action="RemoveConfirm">
         <input type="hidden" asp-for="ID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <button type="button" class="btn btn-warning"><a class="text-light text-decoration-none" asp-action="Index">Back</a></button>
     </form>
 </div>
