--- a/Views/Post/Add.cshtml
+++ b/Views/Post/Add.cshtml
@@ -6,7 +6,6 @@
 
 <h1>Add</h1>
 
-<h4>PostModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -14,17 +13,17 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
+                <input asp-for="Title" class="form-control" required />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Content" class="control-label"></label>
-                <input asp-for="Content" class="form-control" />
+                <input asp-for="Content" class="form-control" required/>
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Author" class="control-label"></label>
-                <input asp-for="Author" class="form-control" />
+                <input asp-for="Author" class="form-control" required/>
                 <span asp-validation-for="Author" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -35,6 +34,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <button type="button" class="btn btn-danger"><a class="text-light text-decoration-none" asp-action="Index">Back</a></button>
 </div>
 
