--- a/Views/Post/Details.cshtml
+++ b/Views/Post/Details.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "View";
 }
 
-<h1>View</h1>
+<h1>Details</h1>
 
 <div>
-    <h4>PostModel</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -31,6 +30,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.ID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <button type="button" class="btn btn-primary"><a class="text-light text-decoration-none" asp-action="Edit" asp-route-id="@Model?.ID">Edit</a></button>
+    <button type="button" class="btn btn-danger"><a class="text-light text-decoration-none" asp-action="Index">Back</a></button>
 </div>
