--- a/Views/Post/Edit.cshtml
+++ b/Views/Post/Edit.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "View";
 }
 
-<h1>View</h1>
+<h1>Edit</h1>
 
-<h4>PostModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -15,17 +14,17 @@
             <input type="hidden" asp-for="ID" />
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
+                <input asp-for="Title" class="form-control" required/>
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Content" class="control-label"></label>
-                <input asp-for="Content" class="form-control" />
+                <input asp-for="Content" class="form-control"required/>
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Author" class="control-label"></label>
-                <input asp-for="Author" class="form-control" />
+                <input asp-for="Author" class="form-control" required/>
                 <span asp-validation-for="Author" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -36,6 +35,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <button type="button" class="btn btn-danger"><a class="text-light text-decoration-none" asp-action="Index">Back</a></button>
 </div>
 
