--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - Posts - <a href="">Mariusz Jakubiak</a>
+            &copy; 2023 - Posts - <a href="https://github.com/mariuszjakubiak" target="_blank">Mariusz Jakubiak</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
