--- a/Views/Post/Edit.cshtml
+++ b/Views/Post/Edit.cshtml
@@ -35,6 +35,6 @@
 </div>
 
 <div>
-    <button type="button" class="btn btn-danger"><a class="text-light text-decoration-none" asp-action="Index">Back</a></button>
+    <a class="btn btn-danger text-light text-decoration-none" asp-action="Index">Back</a>
 </div>
 
