--- a/Views/Post/Details.cshtml
+++ b/Views/Post/Details.cshtml
@@ -30,6 +30,6 @@
     </dl>
 </div>
 <div>
-    <button type="button" class="btn btn-primary"><a class="text-light text-decoration-none" asp-action="Edit" asp-route-id="@Model?.ID">Edit</a></button>
-    <button type="button" class="btn btn-danger"><a class="text-light text-decoration-none" asp-action="Index">Back</a></button>
+    <a class="btn btn-primary text-light text-decoration-none" asp-action="Edit" asp-route-id="@Model?.ID">Edit</a>
+    <a class="btn btn-danger text-light text-decoration-none" asp-action="Index">Back</a>
 </div>
