--- a/Views/Post/Remove.cshtml
+++ b/Views/Post/Remove.cshtml
@@ -32,7 +32,7 @@
     
     <form asp-action="RemoveConfirm">
         <input type="hidden" asp-for="ID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <button type="button" class="btn btn-warning"><a class="text-light text-decoration-none" asp-action="Index">Back</a></button>
+        <input type="submit" value="Delete" class="btn btn-danger" />
+        <a class="btn btn-warning text-light text-decoration-none" asp-action="Index">Back</a>
     </form>
 </div>
